[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3",]

[project]
name = "charRanges"
description = "A library for manipulating character ranges"
readme = "ReadMe.md"
keywords = ["charRanges",]
license = {text = "Unlicense"}
authors = [{name = "KOLANICH"}]
requires-python = ">=3.4"
dynamic = ["version"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"rangeslicetools", # @ git+https://github.com/KOLANICH-libs/rangeslicetools.py.git
]

[project.optional-dependencies]
generation = [
	"escapelib", # @ git+https://github.com/UniGrammar/escapelib.py
]

[project.urls]
Homepage = "https://github.com/UniGrammar/charRanges.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["charRanges", "charRanges.*"]

[tool.setuptools_scm]
